--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-
+    <!-- Little change to force gh-pages redeploy -->
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>vr.cwervo.com !</title>
     <meta property="og:url"                content="http://vr.cwervo.com/" />
